ProFit Event App/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <description>Attendee&apos;s Current Company</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Attendee&apos;s Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attendee&apos;s Address</description>
        <label>Location List</label>
        <referenceTo>Location_List__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Attendee&apos;s Phone Number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>